Working on the about page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <nav class="navbar navbar-dark bg-white">
   <a class="navbar-brand" href="#">
     <img src="" width="30" height="30" class="d-inline-block align-top" alt="B">
-    aliwa Music Concert
+    Rolex Festival Soroti
   </a>
 
              <div>
@@ -53,7 +53,7 @@
                    <a class="nav-link" href="index.html">Home</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="#">About</a>
+                   <a class="nav-link" href="about.html">About</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="#">Services</a>
@@ -151,7 +151,7 @@
       <img src="images/jeo.jpg" class="float-left" alt="Chef Jeolaste">
       <div class="card-body">
         <h5 class="card-title text-right">Jelaste</h5>
-        <p class="card-title text-right">Perfection is alot of little things done right.</p>
+        <p class="card-title text-right">Perfection is alot of little things done right.A professional pinnacle to which many chefs aspire.</p>
       </div>
     </div>
   </div>
@@ -177,14 +177,56 @@
     <div>
       <img src="images/sung.jpg" class="float-left" alt="Chef Sung">
       <div class="card-body">
-        <h5 class="card-title text-right">Card title</h5>
+        <h5 class="card-title text-right">Chef Singh </h5>
         <p class="card-text text-right">The contemporary kitchen, from institutional to fine-dining restaurant, runs according to a strict hierarchy in which the chef plays the lead role.</p>
       </div>
     </div>
   </div>
+  <div class="col d-flex align-items-center">
+    <div>
+      <img src="images/saf.jpg" class="float-left" alt="Chef Sung">
+      <div class="card-body">
+        <h5 class="card-title text-right">Chef Claude </h5>
+        <p class="card-text text-right"></p>
+      </div>
+    </div>
+  </div>
+  <div class="col d-flex align-items-center">
+    <div>
+      <img src="images/d.jpg" class="float-left" alt="Chef Diana">
+      <div class="card-body">
+        <h5 class="card-title text-right">Chef Diana </h5>
+        <p class="card-text text-right"></p>
+      </div>
+    </div>
+  </div>
 </div>
-        
-       </div>
+</div>
+</section>
+<section class="partners">
+  <div id="ptnr-container" class="container">
+      <h2 class="title">Partners</h2>
+      <hr>
+      <ul class="part-list">
+         <li><h1>Jumia</h1></li>
+         <li><p>Safe boda</p></li>
+         <li><h2>Leone Island</h2></li>
+         <li><h3>Goodlyf</h3></li>
+         <li><p>Quickets</p></li>
+      </ul>
+  </div>
+</section>
+<section class="footer">
+  <div class="footer-logo">
+      <i class="fab fa-bootstrap fa-2x"></i>
+         <div class="footer-logo-text">
+             <h2>Rolex</h2>
+             <h3>Festival Soroti</h3>
+         </div>
+     </div>
+     <div class="footer-about">
+         <p>2020 Rolex Festival Soroti. Some Rights Reserved</p>
+     </div>   
 </section>
 </body>
 </html>
