about page body

--- a/about.html
+++ b/about.html
@@ -74,12 +74,12 @@
       </header> 
       <section class="about-event">
         <div class="container">
-        <h1 class="text-center">Rolex <br class="text-center">
+        <h1>Rolex <br>
            Festival Soroti 2020 
            </h1>
            <hr>
            
-           <div class="card" style="width: 18rem;">
+           <div class="card" style="width: auto;">
             <div class="card-body">
               <p class="card-text">The Rolex Festival is a major food event organised to popularise the snack and as part of efforts to promote food tourism in Uganda. Awarded 'Food Event of Year' in the 2019 Ekkula Awards for tourism, the event is a brainchild of Mirembe, a Miss Tourism Busoga 2015/2016.
            </p>
@@ -93,14 +93,13 @@
       <div class="container">
           <h2>Rolex festival 2020 Soroti Logo</h2>
           <hr>
-          <p>The logo of the Boom Festival was initated by the founder Mr Williams in 2016, 
-              the letter B represent BreakThrough. A breakthrough in the world of entertainment.</p>
+          <p> At the launch, guests feasted on different kinds of the Rolex. Mirembe noted that the snack can be spiced with different recipes, including chicken, beef, Malewa (from Bugisu) and Eshabwe (from Ankole).</p>
               <div class="logo">
                <i class="fab fa-bootstrap fa-2x"></i>
                   <div class="logo-text">
-                      <h2>Boom</h2>
-                      <h3>Music Festival</h3>
-                      <h4>July 10 2019</h4>
+                      <h2>Rolex</h2>
+                      <h3>Festival Soroti</h3>
+                      <h4>2020</h4>
                   </div>
               </div>              
                </div>
