--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/ct-navbar.css" rel="stylesheet" />-->
     <link rel="stylesheet" href="style.css">
 
-    <title>Baliwa Music Concert</title>
+    <title>Rolex Festival Soroti</title>
 </head>
 <body>
    <header>
