updating the README file

--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <title>Rolex Festival Soroti</title>
 </head>
 <body>
-    <div class="menu-btn">
+    <!--<div class="menu-btn">
         <i class="fas fa-bars fa-2x"></i>
-      </div>
+      </div>-->
       <header>
         <nav class="navbar-dark bg-dark">
             <div class="topNav">
@@ -96,13 +96,48 @@
           <p> At the launch, guests feasted on different kinds of the Rolex. Mirembe noted that the snack can be spiced with different recipes, including chicken, beef, Malewa (from Bugisu) and Eshabwe (from Ankole).</p>
               <div class="logo">
                <i class="fab fa-bootstrap fa-2x"></i>
-                  <div class="logo-text">
-                      <h2>Rolex</h2>
+                  
+                    <div class="card" style="width: auto;">
+                    <h2>Rolex</h2>
                       <h3>Festival Soroti</h3>
                       <h4>2020</h4>
-                  </div>
+                    </div>  
+                 
               </div>              
                </div>
   </section>
+  <section class="past-event">
+    <div class="container">
+        <h2>See Rolex Festival past events</h2>
+        <hr>
+        <p>You can check out our two major event in Soroti and Kampala</p>
+         <div class="event-images">
+             <div class="card event-image" style="width: 18rem;">
+              <img src="images/oth.jpg" class="card-img" alt="oth">
+              <div class="card-img-overlay">
+                <h3 class="card-title">Rolex Festival Kampala 2017</h3> 
+             </div>
+             <div class="card second-event-image">
+              <img src="images/rola.jpg" class="card-img" alt="rola">
+              <div class="card-img-overlay">
+             <h3>Rolex Festival Soroti 2018</h3>
+            </div> 
+            </div>
+            </div>
+         </div>
+    </div>
+</section>
+<section class="footer bg-dark">
+  <div class="footer-logo bottom">
+      <i class="fab fa-bootstrap fa-2x"></i>
+         <div class="footer-logo-text">
+             <h2>Rolex</h2>
+             <h3>Festival 2020</h3>
+         </div>
+     </div>
+     <div class="footer-about bottom">
+         <p>2020 Rolex Festival Soroti. Some Rights Reserved</p>
+     </div>   
+</section>
 </body>
 </html>
