working on the responsiveness

--- a/about.html
+++ b/about.html
@@ -18,22 +18,22 @@
                 <ul class="nav justify-content-end">
                  <li class="nav-item">
                      <a href="#">
-                      <i class="fa fa-facebook nav-link" aria-hidden="true"></i>
+                      <i class="fa fa-facebook nav-link" style="color:white" aria-hidden="true"></i>
                      </a>
                  </li>
                  <li class="nav-item">
                   <a href="#">
-                      <i class="fa fa-twitter nav-link" aria-hidden="true"></i>
+                      <i class="fa fa-twitter nav-link" style="color:white" aria-hidden="true"></i>
                   </a>
               </li>
                  <li class="nav-item">
-                   <a class="nav-link active" href="#">English</a>
+                   <a class="nav-link active" style="color:white" href="#">English</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="#">My page</a>
+                   <a class="nav-link" style="color:white" href="#">My page</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="#">Logout</a>
+                   <a class="nav-link" style="color:white" href="#">Logout</a>
                  </li>
                  
                </ul>
@@ -41,12 +41,12 @@
             <div class="secondNav">
              <!-- Image and text -->
  <nav class="navbar navbar-dark bg-white">
-   <a class="navbar-brand" href="#">
-     <img src="" width="30" height="30" class="d-inline-block align-top" alt="B">
-     Rolex Festival Soroti
-   </a>
- 
-              <div>
+  <div class="flex-start"> <a class="navbar-brand" href="#">
+     <img src="images/letter-r-48.ico" width="30" height="30" class="d-inline-block align-top" style="background-color:black" alt="B">
+    </a>
+    <span>Rolex Festival Soroti
+    </span></div>
+               <div>
                 <ul class="nav justify-content-end">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
