--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!--<link href="css/bootstrap.css" rel="stylesheet" />
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet" />
-    <link href="css/ct-navbar.css" rel="stylesheet" />-->
+
     <link rel="stylesheet" href="style.css">
 
     <title>Rolex Festival Soroti</title>
@@ -19,35 +17,35 @@
                <ul class="nav justify-content-end">
                 <li class="nav-item">
                     <a href="#">
-                     <i class="fa fa-facebook nav-link" aria-hidden="true"></i>
+                     <i class="fa fa-facebook nav-link"  style="color:white" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                  <a href="#">
-                     <i class="fa fa-twitter nav-link" aria-hidden="true"></i>
+                     <i class="fa fa-twitter nav-link"  style="color:white" aria-hidden="true"></i>
                  </a>
              </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">English</a>
+                  <a class="nav-link active"  style="color:white" href="#">English</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">My page</a>
+                  <a class="nav-link"  style="color:white" href="#">My page</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Logout</a>
+                  <a class="nav-link"  style="color:white" href="#">Logout</a>
                 </li>
                 
               </ul>
            </div>
            <div class="secondNav">
-            <!-- Image and text -->
+            
 <nav class="navbar navbar-dark bg-white">
-  <a class="navbar-brand" href="#">
-    <img src="" width="30" height="30" class="d-inline-block align-top" alt="B">
-    Rolex Festival Soroti
+  <div class="flex-start"><a class="navbar-brand" href="#">
+    <img src="images/letter-r-48.ico" width="30" height="30" class="d-inline-block align-top" style="background-color:black" alt="R">
   </a>
-
-             <div>
+  <span>Rolex Festival Soroti</span>
+</div>
+              <div>
                <ul class="nav justify-content-end">
                  <li class="nav-item">
                    <a class="nav-link" href="index.html">Home</a>
@@ -148,7 +146,7 @@
   <div class="row row-cols-1 row-cols-md-2">
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/jeo.jpg" class="float-left" alt="Chef Jeolaste">
+      <img src="images/jeo.jpg" id ="chef-image" class="float-left" alt="Chef Jeolaste">
       <div class="card-body">
         <h5 class="card-title text-right">Jelaste</h5>
         <p class="card-title text-right">Perfection is alot of little things done right.A professional pinnacle to which many chefs aspire.</p>
@@ -157,7 +155,7 @@
   </div>
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/amarach.jpg" class="float-left" alt="Chef Amarach">
+      <img src="images/amarach.jpg" id ="chef-image" class="float-left" alt="Chef Amarach">
       <div class="card-body">
         <h5 class="card-title text-right">Chef Amarach</h5>
         <p class="card-title text-right">Come twist your taste buds, for she has mastered the art of flavour.</p>
@@ -166,7 +164,7 @@
   </div>
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/Chef-Wanyama.jpg" class="float-left" alt="Chef-Wanyama">
+      <img src="images/Chef-Wanyama.jpg" id ="chef-image" class="float-left" alt="Chef-Wanyama">
       <div class="card-body">
         <h5 class="card-title text-right">Chef Don Wanyama</h5>
         <p class="card-text text-right">A chef is a trained professional cook and tradesman who is proficient in all aspects of food preparation, often focusing on a particular cuisine. And that is Don Wanyama</p>
@@ -175,7 +173,7 @@
   </div>
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/sung.jpg" class="float-left" alt="Chef Sung">
+      <img src="images/sung.jpg" id ="chef-image" class="float-left" alt="Chef Sung">
       <div class="card-body">
         <h5 class="card-title text-right">Chef Singh </h5>
         <p class="card-text text-right">The contemporary kitchen, from institutional to fine-dining restaurant, runs according to a strict hierarchy in which the chef plays the lead role.</p>
@@ -184,19 +182,19 @@
   </div>
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/saf.jpg" class="float-left" alt="Chef Sung">
+      <img src="images/saf.jpg" id ="chef-image" class="float-left" alt="Chef Sung">
       <div class="card-body">
         <h5 class="card-title text-right">Chef Claude </h5>
-        <p class="card-text text-right"></p>
+        <p class="card-text text-right">A festival can never be complete without Chef Claude, an award winning chef.</p>
       </div>
     </div>
   </div>
   <div class="col d-flex align-items-center">
     <div>
-      <img src="images/d.jpg" class="float-left" alt="Chef Diana">
+      <img src="images/d.jpg" id ="chef-image" class="float-left" alt="Chef Diana">
       <div class="card-body">
         <h5 class="card-title text-right">Chef Diana </h5>
-        <p class="card-text text-right"></p>
+        <p class="card-text text-right">For the best strret food experience we had to invite chef Diana.</p>
       </div>
     </div>
   </div>
@@ -204,7 +202,7 @@
 </div>
 </section>
 <section class="partners">
-  <div id="ptnr-container" class="container">
+  <div id="part-container" class="container">
       <h2 class="title">Partners</h2>
       <hr>
       <ul class="part-list">
