fixing the protuding div

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
          "°WHERE I COME FROM, A ROLEX DOESN'T TELL TIME°"
        </h4>
        <h1 class="card-text">ROLEX FESTIVAL SOROTI<br>
-      FESTIVE SEASON 2020 </h1>
+      FESTIVE SEASON 2021 </h1>
       <p class="card-text">
         Chapatti and eggs plus vegetables number 1 road side delicacy.
       </p>
-      <h2 class="card-text text-center">2020.12.11(Friday)</h2>
+      <h2 class="card-text text-center">2021.12.11(Friday)</h2>
           <h3 class="card-text text-center">@ HYDE PARK SOROTI</h3>
         </div>
         </div>
@@ -103,29 +103,29 @@
            </div>
          </div>
        </div>-->
-       <div class="card-deck">
-        <div class="card bg-dark mb-3 text-center">
+       <div class="card-deck mx-auto mb-2 container-fluid p-0 pt-2">
+        <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/mic.png" class="card-img-top" alt="Mic">
-          <div class="card-body">
+          <div class="card-body mx-auto">
             <h5 class="card-title">Lugaflow</h5>
             <p class="card-text">For those die hard luga flow fans we have got you covered</p>
           </div>
         </div>
-        <div class="card bg-dark mb-3 text-center">
+        <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/users-solid.svg" class="card-img-top" alt="People">
           <div class="card-body">
             <h5 class="card-title">Meet and greet</h5>
             <p class="card-text">Get an opprotunity to hangout with the living legend and probably get a selfie with the legend.</p>
           </div>
         </div>
-        <div class="card bg-dark mb-3 text-center">
+        <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/swimming-pool-solid.svg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Swimming competition</h5>
             <p class="card-text">If swimming is your thing, let's dive in!!!.</p>
           </div>
         </div>
-        <div class="card bg-dark mb-3 text-center">
+        <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/game.png" class="card-img-top" alt="People">
           <div class="card-body">
             <h5 class="card-title">Gaming</h5>
@@ -134,19 +134,20 @@
         </div>
         
       </div>
-      <ul>
-        <li><a class ="text-justify" href="#">Other Fun Activites</a></li>
+      <ul class="d-flex justify-content-center text-body">
+        <li><a href="#">Other Fun Activites</a></li>
       </ul>
      </section>
      <section class="perfomers">
        <div class="container">
-        <h2 class="text-center">Featured Chefs</h2>
+        <h2>Featured Chefs</h2>
         <hr>
        
   <div class="row row-cols-1 row-cols-md-2">
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/jeo.jpg" id ="chef-image" class="float-left" alt="Chef Jeolaste">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/jeo.jpg"  class="float-left chef-image mb-3" alt="Chef Jeolaste">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Jelaste</h5>
         <p class="card-title text-right">Perfection is alot of little things done right.A professional pinnacle to which many chefs aspire.</p>
@@ -154,8 +155,9 @@
     </div>
   </div>
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/amarach.jpg" id ="chef-image" class="float-left" alt="Chef Amarach">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/amarach.jpg"  class="float-left chef-image mb-3" alt="Chef Amarach">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Amarach</h5>
         <p class="card-title text-right">Come twist your taste buds, for she has mastered the art of flavour.</p>
@@ -163,8 +165,9 @@
     </div>
   </div>
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/Chef-Wanyama.jpg" id ="chef-image" class="float-left" alt="Chef-Wanyama">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/Chef-Wanyama.jpg"  class="float-left chef-image" alt="Chef-Wanyama">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Don Wanyama</h5>
         <p class="card-text text-right">A chef is a trained professional cook and tradesman who is proficient in all aspects of food preparation, often focusing on a particular cuisine. And that is Don Wanyama</p>
@@ -172,8 +175,9 @@
     </div>
   </div>
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/sung.jpg" id ="chef-image" class="float-left" alt="Chef Sung">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/sung.jpg"  class="float-left chef-image" alt="Chef Sung">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Singh </h5>
         <p class="card-text text-right">The contemporary kitchen, from institutional to fine-dining restaurant, runs according to a strict hierarchy in which the chef plays the lead role.</p>
@@ -181,8 +185,9 @@
     </div>
   </div>
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/saf.jpg" id ="chef-image" class="float-left" alt="Chef Sung">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/saf.jpg"  class="float-left chef-image" alt="Chef Sung">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Claude </h5>
         <p class="card-text text-right">A festival can never be complete without Chef Claude, an award winning chef.</p>
@@ -190,8 +195,9 @@
     </div>
   </div>
   <div class="col d-flex align-items-center">
-    <div>
-      <img src="images/d.jpg" id ="chef-image" class="float-left" alt="Chef Diana">
+    <div class="d-flex  justify-content-between">
+      <div class="image-container"><img src="images/d.jpg"  class="float-left chef-image" alt="Chef Diana">
+      </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Diana </h5>
         <p class="card-text text-right">For the best strret food experience we had to invite chef Diana.</p>
