working on the tickets page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <a class="nav-link" href="about.html">About</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="#">Services</a>
+                   <a class="nav-link" href="tickets.html">Services</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="#">Artists</a>
