working on the about page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <a class="nav-link" href="about.html">About</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="tickets.html">Services</a>
+                   <a class="nav-link" href="tickets.html">Tickets</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="#">Artists</a>
@@ -92,17 +92,7 @@
         </div>
      </section>
      <section class="side">
-       <!--<div class="container">
-         <h2>Side Attraction</h2>
-         <hr>
-         <div class="other">
-           <div>
-             <i class=""></i>
-             <h3>Lugaflow</h3>
-             <p>For all the core lugaflow addicts, we got you</p>
-           </div>
-         </div>
-       </div>-->
+
        <div class="card-deck mx-auto mb-2 container-fluid p-0 pt-2">
         <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/mic.png" class="card-img-top" alt="Mic">
@@ -229,7 +219,7 @@
          </div>
      </div>
      <div class="footer-about">
-         <p>2020 Rolex Festival Soroti. Some Rights Reserved</p>
+         <p>2021 Rolex Festival Soroti. Some Rights Reserved</p>
      </div>   
 </section>
 </body>
