--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </a>
   <span>Rolex Festival Soroti</span>
 </div>
-              <div>
+              <div class="bg">
                <ul class="nav justify-content-end">
                  <li class="nav-item">
                    <a class="nav-link" href="index.html">Home</a>
@@ -54,7 +54,7 @@
                    <a class="nav-link" href="about.html">About</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="tickets.html">Tickets</a>
+                   <a class="nav-link" href="#">Services</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="#">Artists</a>
@@ -63,7 +63,7 @@
                    <a class="nav-link" href="#">Contact</a>
                  </li>
                  <li class="nav-item">
-                   <a id="active-btn" class="btn" href="ticktes.html">For Tickets</a>
+                   <a id="active-btn" class="btn" href="tickets.html">For Tickets</a>
                  </li>
                </ul>
              </div>
@@ -92,8 +92,10 @@
         </div>
      </section>
      <section class="side">
+       <h2>Other Attractions</h2>
+       <hr>
 
-       <div class="card-deck mx-auto mb-2 container-fluid p-0 pt-2">
+       <div class="card-deck mx-auto mb-2 container-fluid p-0 pt-2 ml-auto">
         <div class="card bg-dark mb-3 mr-1 text-center">
           <img src="images/mic.png" class="card-img-top" alt="Mic">
           <div class="card-body mx-auto">
@@ -139,7 +141,7 @@
       <div class="image-container"><img src="images/jeo.jpg"  class="float-left chef-image mb-3" alt="Chef Jeolaste">
       </div>
       <div class="card-body">
-        <h5 class="card-title text-right">Jelaste</h5>
+        <h5 class="card-title text-right">Jeolaste</h5>
         <p class="card-title text-right">Perfection is alot of little things done right.A professional pinnacle to which many chefs aspire.</p>
       </div>
     </div>
@@ -170,7 +172,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title text-right">Chef Singh </h5>
-        <p class="card-text text-right">The contemporary kitchen, from institutional to fine-dining restaurant, runs according to a strict hierarchy in which the chef plays the lead role.</p>
+        <p class="card-text text-right" id="ex">The contemporary kitchen, from institutional to fine-dining restaurant, runs according to a strict hierarchy in which the chef plays the lead role.</p>
       </div>
     </div>
   </div>
@@ -202,7 +204,7 @@
       <h2 class="title">Partners</h2>
       <hr>
       <ul class="part-list">
-         <li><h1>Jumia</h1></li>
+         <li><h1 id="dd">Jumia</h1></li>
          <li><p>Safe boda</p></li>
          <li><h2>Leone Island</h2></li>
          <li><h3>Goodlyf</h3></li>
