--- a/tickets.html
+++ b/tickets.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Services</a>
@@ -64,7 +64,7 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a id="active-btn" class="btn" href="ticktes.html">For Tickets</a>
+                    <a id="active-btn" class="btn" href="tickets.html">For Tickets</a>
                   </li>
                 </ul>
               </div>
@@ -73,10 +73,17 @@
         </nav>
       </header> 
 <div class="tik">
-    <h3>Select Tickets</h3>
+  
+  <br>
+
+    <h5 class="text-center">Select Tickets</h5>
+    <hr>
     <br>
-    <h5 class=" w-50 p-3 bg-light border rounded">Please select the day when you want to join The Rolex Festival</h5>
+      <p class="tickets-select w-50 p-3">
+        Step 1 <span class="span-ticket-text">Please select the day you want to join The Rolex Festival</span>  
+      </p>
 </div>
+<br>
 <div class="tbl">
     <table class="table table-bordered table-sm">
         <thead>
@@ -112,7 +119,7 @@
         </tbody>
       </table>
 </div>
-<div>
+<div class="lunch">
   <h3>Select Your Lunch</h3>
   <br>
   <h6 class=" w-50 p-3 bg-light border rounded">Please select your lunch for registered day. There will be no further costs for the lunch</h6>
