--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <title>Rolex Festival Soroti</title>
 </head>
 <body>
-    <!--<div class="menu-btn">
+    <div class="menu-btn">
         <i class="fas fa-bars fa-2x"></i>
-      </div>-->
+      </div>
       <header>
         <nav class="navbar-dark bg-dark">
             <div class="topNav">
@@ -136,7 +136,7 @@
          </div>
     </div>
 </section>
-<section class="footer bg-dark">
+<section class="footer bg-dark text-white">
   <div class="footer-logo bottom">
     
          <div class="footer-logo-text">
