--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         
       </div>
       <ul class="d-flex justify-content-center text-body">
-        <li><a href="#">Other Fun Activites</a></li>
+        <li><a href="#" id="oth">Other Fun Activites</a></li>
       </ul>
      </section>
      <section class="perfomers">
