--- a/tickets.html
+++ b/tickets.html
@@ -85,7 +85,7 @@
 </div>
 <br>
 <div class="tbl">
-    <table class="table table-bordered table-sm">
+    <table class="table table-bordered">
         <thead>
           <tr>
             <th scope="col">Ticket</th>
@@ -119,10 +119,77 @@
         </tbody>
       </table>
 </div>
-<div class="lunch">
-  <h3>Select Your Lunch</h3>
-  <br>
-  <h6 class=" w-50 p-3 bg-light border rounded">Please select your lunch for registered day. There will be no further costs for the lunch</h6>
+<br>
+<div class="box">
+  <i class="fas fa-chevron-down"></i>
 </div>
+<div class="lunch">
+
+  <h5 class="text-center">Select Your Lunch</h5>
+  <hr>
+  
+  <h6 class="lunch-select w-50 p-3 bg-light border rounded">  Step 2
+    <span>Please select your lunch for registered day. There will be no further costs for the lunch</h6></span>
+</div>
+<div class="lunch-ticket">
+<div class="lunch-ticket-1">
+  <div class="gr"></div>
+  <ul class="lt">
+    <li>
+      <label for="lt-1">Menu 1</label>
+      <input type="radio" id="lt-1" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 2</label>
+      <input type="radio" id="lt-2" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 3</label>
+      <input type="radio" id="lt-3" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 4</label>
+      <input type="radio" id="lt-4" name="menu" value="menu">
+    </li>
+  </ul>
+</div>
+
+<div class="lunch-ticket-2">
+  <div class="gr"></div>
+  <ul class="lt">
+    <li>
+      <label for="lt-1">Menu 5</label>
+      <input type="radio" id="lt-5" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 6</label>
+      <input type="radio" id="lt-6" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 7</label>
+      <input type="radio" id="lt-7" name="menu" value="menu">
+    </li>
+    <li>
+      <label for="lt-1">Menu 8</label>
+      <input type="radio" id="lt-8" name="menu" value="menu">
+    </li>
+  </ul>
+</div>
+</div>
+<a href="#" class="button">Submit</a>
+
+<section class="footer bg-dark text-white">
+  <div class="footer-logo bottom">
+    
+         <div class="footer-logo-text">
+             <h2>Rolex</h2>
+             <h3>Festival 2021</h3>
+         </div>
+     </div>
+     <div class="footer-about bottom">
+         <p>2021 Rolex Festival Soroti. Some Rights Reserved</p>
+     </div>   
+</section>
+
 </body>
 </html>
