--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
      </section>
      <section class="side">
-       <h2>Other Attractions</h2>
+       <h4 class="text-white text-center">Other Attractions</h4>
        <hr>
 
        <div class="card-deck mx-auto mb-2 container-fluid p-0 pt-2 ml-auto">
@@ -214,7 +214,7 @@
 </section>
 <section class="footer">
   <div class="footer-logo">
-      <i class="fab fa-bootstrap fa-2x"></i>
+    
          <div class="footer-logo-text">
              <h2>Rolex</h2>
              <h3>Festival Soroti</h3>
