--- a/tickets.html
+++ b/tickets.html
@@ -1,197 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Rolex Festival Soroti</title>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0"
+        name="viewport">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        rel="stylesheet">
+  <link crossorigin="anonymous"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        rel="stylesheet">
+  <link href="style.css"
+        rel="stylesheet">
+  <title>Rolex Festival Soroti</title>
 </head>
 <body>
-    <!--<div class="menu-btn">
+  <!--<div class="menu-btn">
         <i class="fas fa-bars fa-2x"></i>
       </div>-->
-      <header>
-        <nav class="navbar-dark bg-dark">
-            <div class="topNav">
-                <ul class="nav justify-content-end">
-                 <li class="nav-item">
-                     <a href="#">
-                      <i class="fa fa-facebook nav-link" style="color:white" aria-hidden="true"></i>
-                     </a>
-                 </li>
-                 <li class="nav-item">
-                  <a href="#">
-                      <i class="fa fa-twitter nav-link" style="color:white" aria-hidden="true"></i>
-                  </a>
+  <header>
+    <nav class="navbar-dark bg-dark">
+      <div class="topNav">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active"
+                href="#"
+                style="color:white">English</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+                href="#"
+                style="color:white">My page</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+                href="#"
+                style="color:white">Logout</a>
+          </li>
+        </ul>
+      </div>
+      <div class="secondNav">
+        <!-- Image and text -->
+        <nav class="navbar navbar-dark bg-white">
+          <div class="flex-start">
+            <a class="navbar-brand"
+                 href="#"><img alt="B"
+                 class="d-inline-block align-top"
+                 height="30"
+                 src="images/letter-r-48.ico"
+                 style="background-color:black"
+                 width="30"></a> <span>Rolex Festival Soroti</span>
+          </div>
+          <div>
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link"
+                    href="index.html">Home</a>
               </li>
-                 <li class="nav-item">
-                   <a class="nav-link active" style="color:white" href="#">English</a>
-                 </li>
-                 <li class="nav-item">
-                   <a class="nav-link" style="color:white" href="#">My page</a>
-                 </li>
-                 <li class="nav-item">
-                   <a class="nav-link" style="color:white" href="#">Logout</a>
-                 </li>
-                 
-               </ul>
-            </div>
-            <div class="secondNav">
-             <!-- Image and text -->
- <nav class="navbar navbar-dark bg-white">
-  <div class="flex-start"> <a class="navbar-brand" href="#">
-     <img src="images/letter-r-48.ico" width="30" height="30" class="d-inline-block align-top" style="background-color:black" alt="B">
-    </a>
-    <span>Rolex Festival Soroti
-    </span></div>
-               <div>
-                <ul class="nav justify-content-end">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Artists</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a id="active-btn" class="btn" href="tickets.html">For Tickets</a>
-                  </li>
-                </ul>
-              </div>
-             </nav>
-            </div>
+              <li class="nav-item">
+                <a class="nav-link"
+                    href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                    href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                    href="#">Artists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                    href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn"
+                    href="tickets.html"
+                    id="active-btn">For Tickets</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-      </header> 
-<div class="tik">
-  
-  <br>
-
+      </div>
+    </nav>
+  </header>
+  <div class="tik">
+    <br>
     <h5 class="text-center">Select Tickets</h5>
     <hr>
     <br>
-      <p class="tickets-select w-50 p-3">
-        Step 1 <span class="span-ticket-text">Please select the day you want to join The Rolex Festival</span>  
-      </p>
-</div>
-<br>
-<div class="tbl">
+    <p class="tickets-select w-50 p-3">Step 1 <span class="span-ticket-text">Please select the day you want to join The Rolex Festival</span></p>
+  </div><br>
+  <div class="tbl">
     <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">Ticket</th>
-            <th scope="col">1-Day-Ticket</th>
-            <th colspan="2">2-Day-Ticket</th>
-            <th scope="col">Affiliate/Partners</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Date</th>
-            <td>15. Nov(Fri)</td>
-            <td>16. Nov(Sat)</td>
-            <td>15-16(Fri-Sat)</td>
-            <td>15-16(Fri-Sat)</td>
-          </tr>
-          <tr>
-            <th scope="row">Normal</th>
-            <td>UGX 30,000</td>
-            <td>UGX 30,000</td>
-            <td>UGX 50,000</td>
-            <td>UGX 0</td>
-          </tr>
-          <tr>
-            <th scope="row">Students</th>
-            <td >UGX 10,000</td>
-            <td>UGX 10,000</td>
-            <td>UGX 30,000</td>
-            <td>UGX 0</td>
-          </tr>
-        </tbody>
-      </table>
-</div>
-<br>
-<div class="box">
-  <i class="fas fa-chevron-down"></i>
-</div>
-<div class="lunch">
-
-  <h5 class="text-center">Select Your Lunch</h5>
-  <hr>
-  
-  <h6 class="lunch-select w-50 p-3 bg-light border rounded">  Step 2
-    <span>Please select your lunch for registered day. There will be no further costs for the lunch</h6></span>
-</div>
-<div class="lunch-ticket">
-<div class="lunch-ticket-1">
-  <div class="gr"></div>
-  <ul class="lt">
-    <li>
-      <label for="lt-1">Menu 1</label>
-      <input type="radio" id="lt-1" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 2</label>
-      <input type="radio" id="lt-2" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 3</label>
-      <input type="radio" id="lt-3" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 4</label>
-      <input type="radio" id="lt-4" name="menu" value="menu">
-    </li>
-  </ul>
-</div>
-
-<div class="lunch-ticket-2">
-  <div class="gr"></div>
-  <ul class="lt">
-    <li>
-      <label for="lt-1">Menu 5</label>
-      <input type="radio" id="lt-5" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 6</label>
-      <input type="radio" id="lt-6" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 7</label>
-      <input type="radio" id="lt-7" name="menu" value="menu">
-    </li>
-    <li>
-      <label for="lt-1">Menu 8</label>
-      <input type="radio" id="lt-8" name="menu" value="menu">
-    </li>
-  </ul>
-</div>
-</div>
-<br>
-<a href="#" class="button">Submit</a>
-<br>
-<br>
-<section class="footer bg-dark text-white">
-  <div class="footer-logo bottom">
-    
-         <div class="footer-logo-text">
-             <h2>Rolex</h2>
-             <h3>Festival 2021</h3>
-         </div>
-     </div>
-     <div class="footer-about bottom">
-         <p>2021 Rolex Festival Soroti. Some Rights Reserved</p>
-     </div>   
-</section>
-
+      <thead>
+        <tr>
+          <th scope="col">Ticket</th>
+          <th scope="col">1-Day-Ticket</th>
+          <th colspan="2">2-Day-Ticket</th>
+          <th scope="col">Affiliate/Partners</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Date</th>
+          <td>15. Nov(Fri)</td>
+          <td>16. Nov(Sat)</td>
+          <td>15-16(Fri-Sat)</td>
+          <td>15-16(Fri-Sat)</td>
+        </tr>
+        <tr>
+          <th scope="row">Normal</th>
+          <td>UGX 30,000</td>
+          <td>UGX 30,000</td>
+          <td>UGX 50,000</td>
+          <td>UGX 0</td>
+        </tr>
+        <tr>
+          <th scope="row">Students</th>
+          <td>UGX 10,000</td>
+          <td>UGX 10,000</td>
+          <td>UGX 30,000</td>
+          <td>UGX 0</td>
+        </tr>
+      </tbody>
+    </table>
+  </div><br>
+  <div class="box"></div>
+  <div class="lunch">
+    <h5 class="text-center">Select Your Lunch</h5>
+    <hr>
+    <h6 class="lunch-select w-50 p-3 bg-light border rounded">Step 2 <span>Please select your lunch for registered day. There will be no further costs for the lunch</span></h6>
+  </div>
+  <div class="lunch-ticket">
+    <div class="lunch-ticket-1">
+      <div class="gr"></div>
+      <ul class="lt">
+        <li><label for="lt-1">Menu 1</label> <input id="lt-1"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 2</label> <input id="lt-2"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 3</label> <input id="lt-3"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 4</label> <input id="lt-4"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+      </ul>
+    </div>
+    <div class="lunch-ticket-2">
+      <div class="gr"></div>
+      <ul class="lt">
+        <li><label for="lt-1">Menu 5</label> <input id="lt-5"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 6</label> <input id="lt-6"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 7</label> <input id="lt-7"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+        <li><label for="lt-1">Menu 8</label> <input id="lt-8"
+               name="menu"
+               type="radio"
+               value="menu"></li>
+      </ul>
+    </div>
+  </div><br>
+  <a class="button"
+        href="#">Submit</a><br>
+  <br>
+  <section class="footer bg-dark text-white">
+    <div class="footer-logo bottom">
+      <div class="footer-logo-text">
+        <h2>Rolex</h2>
+        <h3>Festival 2021</h3>
+      </div>
+    </div>
+    <div class="footer-about bottom">
+      <p>2021 Rolex Festival Soroti. Some Rights Reserved</p>
+    </div>
+  </section>
 </body>
 </html>
