--- a/tickets.html
+++ b/tickets.html
@@ -15,9 +15,6 @@
   <title>Rolex Festival Soroti</title>
 </head>
 <body>
-  <!--<div class="menu-btn">
-        <i class="fas fa-bars fa-2x"></i>
-      </div>-->
   <header>
     <nav class="navbar-dark bg-dark">
       <div class="topNav">
@@ -97,7 +94,7 @@
     <br>
     <p class="tickets-select w-50 p-3">Step 1 <span class="span-ticket-text">Please select the day you want to join The Rolex Festival</span></p>
   </div><br>
-  <div class="tbl table-responsive-sm">
+  <div class="tbl table-responsive-xsm">
     <table class="table table-bordered">
       <thead>
         <tr>
